feat: synchronize two-color device icons
